# control-rs

./: .gitignore  Cargo.toml  Makefile
crates/slicot-bench/: Cargo.toml  README.md
crates/slicot-bench/benches/: rust_routines.rs
crates/slicot-bench/src/: lib.rs
crates/slicot-linalg/: Cargo.toml
crates/slicot-linalg/src/: complex.rs  lib.rs  real.rs
crates/slicot-routines/: Cargo.toml
crates/slicot-routines/src/: ab07nd.rs  ab08nd.rs  ab09ad.rs  ab09md.rs  ab09nd.rs  ab13bd.rs  ab13dd.rs  ab13md.rs  compatibility.rs  lib.rs  mb03rd.rs  module_map.rs  routine_id.rs  sb01bd.rs  sb02md.rs  sb02mt.rs  sb03md.rs  sb03od.rs  sb03qd.rs  sb03sd.rs  sb03td.rs  sb03ud.rs  sb04md.rs  sb04nd.rs  sb04qd.rs  sb04rd.rs  sb10ad.rs  sb10hd.rs  sg02ad.rs  sg03ad.rs  sg03bd.rs  tb01pd.rs  tb04ad.rs  tb05ad.rs  td04ad.rs
crates/slicot-test-harness/: Cargo.toml
crates/slicot-test-harness/examples/: list_example_cases.rs  list_python_control_targets.rs  list_routine_inventory.rs
crates/slicot-test-harness/src/: ab13bd.rs  catalog.rs  error.rs  inventory.rs  lib.rs  python_control.rs  sb02md.rs  sb03md.rs  sb03od.rs  sb03qd.rs  sb03sd.rs  sb03td.rs  sb03ud.rs  sb04md.rs  sb04nd.rs  sb04pd.rs  sb04qd.rs  sb04rd.rs  sg02ad.rs  sg03ad.rs  sg03bd.rs  tb01pd.rs  tb04ad.rs  tb05ad.rs
crates/slicot-test-harness/tests/: ab13bd.rs  ab13bd_routine.rs  catalog.rs  inventory.rs  python_control.rs  sb02md.rs  sb02md_routine.rs  sb03md.rs  sb03md_routine.rs  sb03od.rs  sb03od_routine.rs  sb03qd.rs  sb03qd_routine.rs  sb03sd.rs  sb03sd_routine.rs  sb03td.rs  sb03td_routine.rs  sb03ud.rs  sb03ud_routine.rs  sb04md.rs  sb04md_routine.rs  sb04nd.rs  sb04nd_routine.rs  sb04pd.rs  sb04pd_routine.rs  sb04qd.rs  sb04qd_routine.rs  sb04rd.rs  sb04rd_routine.rs  sg02ad.rs  sg02ad_routine.rs  sg03ad.rs  sg03ad_routine.rs  sg03bd.rs  sg03bd_routine.rs  tb01pd.rs  tb04ad.rs  (+4 more)
docs/: unimplemented-features.md
plans/: pure-rust-slicot-port.md
