[package]
name = "slicot-routines"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
slicot-linalg = { path = "../slicot-linalg" }
nalgebra = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
